--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -1,10 +1,14 @@
-- eduroam
-- ticket why3
+*A faire :*
+
+- eduroam : fait (merci Andrei)
+- ticket why3 
 - finir the spirit of code
 
-Questions :
-- type_module.mlw syntax error	  
-	  
+*Questions :*
+
+- type_module.mlw
+  * syntax error	  
+  	  
 
 
 
