use/clone, module/theory

--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -1,14 +1,20 @@
-*A faire :*
+# A faire :
 
 - eduroam : fait (merci Andrei)
 - ticket why3 
 - finir the spirit of code
 
-*Questions :*
+# Questions :
 
 - type_module.mlw
-  * syntax error	  
+  syntax error	  
   	  
+- différence entre theory et module 
 
+- où trouver list.why dans les sources?
 
+- 'allow editing source files' permanent?
+
+- regalloc/order.mlw
+  différence entre clone et use ici
 
