--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -1,13 +1,14 @@
 # A faire :
 
 - eduroam : fait (merci Andrei)
-- ticket why3 
-- finir the spirit of code
+- créer un ticket why3 
+- finir de lire the spirit of ghost code
+
 
 # Questions :
 
 - type_module.mlw
-  syntax error	  
+  * syntax error	  
   	  
 - différence entre theory et module 
 
@@ -18,3 +19,4 @@
 - regalloc/order.mlw
   différence entre clone et use ici
 
+- ssh sur le git du lri et nombre de projets limité
