--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -7,16 +7,28 @@
 
 # Questions :
 
-- type_module.mlw
-  * syntax error	  
-  	  
-- différence entre theory et module 
+- type_module.mlw :
+  * tout ou rien mettre dans un module
+  
+- différence entre theory et module
+  * pas de différence de syntaxe
 
 - où trouver list.why dans les sources?
+  * ne pas oublier le * dans 
+```sh
+$ find -iname list*
+```
 
 - 'allow editing source files' permanent?
+  * cliquer au bon endroit ...
 
-- regalloc/order.mlw
-  différence entre clone et use ici
+- regalloc/order.mlw : différence entre clone et use ici
+  * use permet de parler des symboles mais ceux-ci ne font pas partie du module courant
+  * clone copie toutes les définitions dans le module courant    
 
 - ssh sur le git du lri et nombre de projets limité
+
+- erreur au lancement du binaire créé
+
+- unbound symbol 'key'
+
