link the spirit

--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -1,8 +1,9 @@
 # A faire :
 
-- eduroam : fait (merci Andrei)
+- eduroam
+  * fait (merci Andrei)
 - créer un ticket why3 
-- finir de lire the spirit of ghost code
+- finir de lire [The Spirit of Ghost Code](https://hal.inria.fr/hal-00873187v1/document)
 
 
 # Questions :
