--- a/2018_10_12.md
+++ b/2018_10_12.md
@@ -2,7 +2,8 @@
 
 - eduroam
   * fait (merci Andrei)
-- créer un ticket why3 
+- créer un ticket why3
+  * fait : issue 241
 - finir de lire [The Spirit of Ghost Code](https://hal.inria.fr/hal-00873187v1/document)
 
 
